clusters/dev/tls/http-redirect-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-echo-http-redirect
  namespace: ml-platform-project-housing
spec:
  parentRefs:
    - name: ml-platform-local
      namespace: ml-platform-system
      sectionName: http
  hostnames:
    - gateway.ml-platform.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /gateway-echo
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 8443
            statusCode: 301
